# complivibe-v5.0-backend

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  DEVELOPMENT_LOG.md  FEATURE_INVENTORY.md  OPUS_BUG_HUNT_LOG.md  PHASE2_TPRM_INTELLIGENCE_REPORT.md  README.md  RECONCILIATION_186.md  THIRD_PARTY_LICENSES.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
docs/: PENDING_API_KEYS.md  a36_integration_seams.md  access_model_design.md  access_model_stage1c_build_plan.md  autopilot_graph_reasoning_design.md  causal_score_propagation_design.md  entity_graph_design.md  event_bus_design.md  fix_report_issue_4_threshold_and_source_type.md  fix_report_parts_a_d.md  recommendation_engine_design.md  router_collision_audit_findings.md  security_fix_report_p1_ux5_p3_2026-07-06.md  shadow_ai_signature_graft_notes.md  v5_architecture.md
reports/: 158_domain_agent_master_scorecard.md  final-sweep-a-ai-governance-llm-observability.md  final-sweep-b-privacy-data-risk-policy-frameworks-controls.md  final-sweep-c-tprm-financial-resilience-financial-crime.md  final-sweep-d-legal-esg-geopolitical-platform.md  master_scorecard_19agent_sweep.md  master_scorecard_counts.json  phase6-closure-report.json  phase6-closure-report.md  phase7-execution-safety-architecture-review.json  phase7-execution-safety-architecture-review.md  phase7-regression-report.json  phase7-regression-report.md  phase8-closure-report.json  phase8-closure-report.md  phase8-diagnostics-integration-readiness-report.json  phase8-diagnostics-integration-readiness-report.md  (+1 more)
(+2120 files in other folders)
