[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complivibe-backend"
version = "0.1.0"
description = "CompliVibe v4.0 backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CompliVibe Engineering" }]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.42,<3.0.0",
  "alembic>=1.16.4,<2.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.1.3,<5.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "authlib>=1.7.2,<2.0.0",
  "email-validator>=2.3.0,<3.0.0",
  "reportlab>=4.2.2,<5.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "weasyprint>=69.0,<70.0.0",
  "apscheduler==3.10.4",
  "openai>=1.40.0,<2.0.0",
  "Jinja2>=3.1.2,<4.0.0",
  "mlflow>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pytest-cov>=6.2.1,<7.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "postgres_smoke: runs real PostgreSQL migration smoke validation",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["py.typed"]
